<resources>
    <string name="img_des">profile pic</string>
    <string name="name_acc">M.Suleiman</string>
    <string name="bio">Passionate about travelling</string>
    <string name="f_c">100</string>
    <string name="f2_c">10k</string>
    <string name="post">3</string>
    <string name="n_p">posts</string>
    <string name="followers">followers</string>
    <string name="following">followings</string>
    <string name="app_name">Insta</string>
    <string name="setting">set</string>
    <string name="username">rmsa234</string>
    <string name="editpro">Edit Profile</string>
    <string name="img">Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>