<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">

    <!-- First CardView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_margin="8dp"
        android:padding="16dp"
        android:background="@color/white"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                app:cardCornerRadius="360dp"
                >
                <!-- Profile picture -->
                <ImageView
                    android:id="@+id/profilePicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/wnl"
                    android:layout_weight="1"
                    android:contentDescription="@string/img_des" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView12"
                cardCornerRadius="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="3"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@color/white"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:background="@color/white"
                        >
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/white"
                            android:gravity="center"
                            android:orientation="vertical">

                            <!-- Number of posts -->
                            <TextView
                                android:id="@+id/postsCount"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/white"
                                android:text="@string/post"
                                android:gravity="center"
                                android:textColor="@color/black"
                                android:textStyle="bold" />

                            <!-- "Posts" label -->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/n_p" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/white"
                            android:gravity="center"
                            android:orientation="vertical">

                            <!-- Number of posts -->
                            <TextView
                                android:id="@+id/followersCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/f_c"
                                android:textStyle="bold" />

                            <!-- "Posts" label -->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/followers" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/white"
                            android:gravity="center"
                            android:orientation="vertical">

                            <!-- Number of posts -->
                            <TextView
                                android:id="@+id/followingsCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/f2_c"
                                android:textStyle="bold" />

                            <!-- "Posts" label -->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/following" />
                        </LinearLayout>
                    </LinearLayout>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/editpro"
                        />

                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <!-- Second CardView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="8dp"
        android:padding="16dp"
        android:background="@color/white"
        cardCornerRadius="8dp">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

            <TextView
                android:id="@+id/myname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/name_acc"
                android:textColor="@color/black"
                android:paddingLeft="16dp"
                android:textStyle="bold"
                />

            <!-- Bio description -->
            <TextView
                android:id="@+id/bioEditText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/bio"
                android:maxLines="3"
                android:textColor="@color/black"
                android:paddingLeft="16dp"
                android:textStyle="bold"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
